SAK-39960 remove answer button breaks navigation
Also removed unused variables, updated some loops and reorganized code.